# MID_ProjectileSystemLib

./: .gitignore  LICENSE  README.md
.github/workflows/: setup-structure.yml
UnityProject/Assets/AD_ProjectileSprites/AA_SpriteAtlas/: PROJECTILE_SPRITE_ATLAS.spriteatlas
UnityProject/Assets/Animum/: Stickman_Base 1.psd  Stickman_Base 2.psd  Stickman_Base.psd  Stickman_Template.psd
UnityProject/Assets/Plugins/Native/macOS/: libprojectile_core.dylib
UnityProject/Assets/ScriptableOjcets/: Default.asset  ProjectileShape.asset
UnityProject/Assets/Scripts/Projectiles/: BurstProjectileJobs.cs  BurstProjectileSimulation.cs  ProjectileBenchmark.cs  ProjectileConfigSO.cs  ProjectileLib.cs  ProjectileManager.cs  ProjectileRegistry.cs  ProjectileRenderer2D.cs  TrailObjectPool.cs  WeaponNetworkBridge.cs
UnityProject/Assets/Scripts/Projectiles/Adapters/: ProjectileTypeRouter.cs
UnityProject/Assets/Scripts/Projectiles/Visual/: TrailObjectPool.cs
UnityProject/Assets/Shaders/: InstancedProjectile.shader  InstancedProjectile_Urp.shader
docs/: MID_ProjectileSystem_Documentation.json
projectile_core/: Cargo.toml
projectile_core/src/: collision.rs  config_store.rs  lib.rs  patterns.rs  simulation.rs  state.rs
