[package]
name = "projectile_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "projectile_core"
crate-type = ["cdylib"]

[dependencies]
# SIMD-friendly linear algebra, no_std compatible
ultraviolet = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
