[package]
name = "projectile_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "projectile_core"
# cdylib  = macOS .dylib / Windows .dll / Linux .so / Android .so
# staticlib = iOS .a (App Store forbids dynamic libs)
crate-type = ["cdylib", "staticlib"]

[dependencies]
ultraviolet = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
